--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,11 +39,14 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation "com.android.volley:volley:1.1.1"
-    implementation 'com.squareup.picasso:picasso:2.71828'
+  //  implementation "com.android.volley:volley:1.1.1"
+  //  implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation "com.github.bumptech.glide:okhttp3-integration:4.11.0"
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 }
