--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.WeatherMama">
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 
     <meta-data
         android:name="com.bumptech.glide.integration.okhttp.OkHttpGlideModule"
@@ -15,8 +18,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/mwa2"
         android:supportsRtl="true"
+
         android:theme="@style/Theme.WeatherMama">
         <activity android:name="com.example.WeatherMama.MainActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
