--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,11 +40,25 @@ repositories {
     google()
 }
 
+
+
+kotlin {
+    repositories {
+        jcenter()
+    }
+
+    experimental {
+        coroutines 'enable'
+    }
+
+    dependencies {
+        implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.8"
+    }
+}
+
 apply plugin: 'kotlin-kapt'
 
 dependencies {
-
-    //kapt 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
